--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.7.0",
     "daisyui": "^3.8.1",
     "eslint": "^8.50.0",
