--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
+    "joi": "^17.11.0",
     "jspdf": "^2.5.1",
     "theme-change": "^2.5.0"
   }
