--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "prettier": "3.0.3"
   },
   "dependencies": {
+    "@sidebase/nuxt-pdf": "^0.1.2",
     "await-to-js": "^3.0.0",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
+    "html2pdf.js": "^0.10.1",
     "joi": "^17.11.0",
     "jspdf": "^2.5.1",
+    "jspdf-html2canvas": "^1.5.1",
     "theme-change": "^2.5.0"
   }
 }
